--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 body{
-    color: rgb(227, 65, 28);
+    color: rgb(210, 66, 141);
     background-color: rgb(248, 209, 243);
+    background-image: url(flor.png);
 }
 header{
-    color: black;
+    color: rgb(86, 5, 5);
 }
 section{
     color: black;
