--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(210, 66, 141);
     background-color: rgb(248, 209, 243);
-    background-image: url(girasol.jpeg);
+    background-image: url(girasol2.webp);
 }
 header{
     color: rgb(0, 0, 0);
